--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -1,4 +1,5 @@
 .banner {
+	position: relative;
 	border-radius: 8px;
 	overflow: hidden;
 	flex-shrink: 0;
@@ -12,7 +13,38 @@
 	width: auto;
 }
 
+.slider {
+	position: relative;
+	white-space: nowrap;
+	transition: all 0.5s ease;
+}
 
+.wrapper {
+	overflow: hidden;
+	display: inline-block;
+}
+
+.buttons {
+	bottom: 8px;
+	left: 50%;
+	transform: translate(-50%);
+	display: flex;
+	gap: 8px;
+	position: absolute;
+}
+
+.btn {
+	cursor: pointer;
+	width: 14px;
+	height: 14px;
+	border-radius: 50%;
+	background-color: rgb(98, 98, 98);
+	box-shadow: 0 0 2px 2px #fff1da;
+}
+
+.active {
+	background-color: rgb(253, 156, 77);
+}
 
 @media (min-width: 992px) and (max-width: 1999px) {
 	.banner {
