--- a/src/components/CartModal/cart-modal.module.css
+++ b/src/components/CartModal/cart-modal.module.css
@@ -27,6 +27,15 @@
 	font-weight: 600;
 }
 
+.empty-cart {
+	display: flex;
+	justify-content: center;
+	padding: 30px 0;
+	color: rgba(89, 89, 89, 0.595);
+	font-weight: bold;
+	font-size: 18px;
+}
+
 .clear-list {
 	font-size: 14px;
 	cursor: pointer;
